new-registry-api-openshift/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: registry-new
    role: server
    deployment: registry-new-api
  name: registry-new-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-new
      role: api
      deployment: registry-new-api
  template:
    metadata:
      labels:
        app: registry-new
        role: api
        deployment: registry-new-api
    spec:
      containers:
        - name: registry-new-api
          image: image-registry.openshift-image-registry.svc:5000/platform-registry-tools/registry-api-new-api:1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
              protocol: TCP
          # readinessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /api/ehlo
          #     port: 5000
          #     scheme: HTTP
          #   initialDelaySeconds: 10
          #   periodSeconds: 6000
          #   successThreshold: 1
          #   timeoutSeconds: 3
          resources:
            limits:
              cpu: 300m
              memory: 128Mi
            requests:
              cpu: 200m
              memory: 92Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 2
