new-registry-api-openshift/base/services.api.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "1"
  labels:
    app: registry-new
  name: platsrv-registry-api
spec:
  ports:
    - name: 4000-tcp
      port: 4000
      protocol: TCP
      targetPort: 4000
  selector:
    deployment: platsrv-registry-api
  sessionAffinity: None
  type: ClusterIP
